Esqueleto do plotContainer

--- a/interface/app/views/plotcontainer.html
+++ b/interface/app/views/plotcontainer.html
@@ -1,1 +1,13 @@
-<p>This is the plotContainer view.</p>
+<div class="ui equal height two column grid">
+  <div class="one column">
+    <conductivityPlot></conductivityPlot>
+  </div>
+  <div class="one column">
+    <div class="row">
+      <phPlot></phPlot>
+    </div>
+    <div class="row">
+      <potentialPlot></potentialPlot>
+    </div>
+  </div>
+</div>
